Removing duplicate links, fixing alignment

--- a/src/NodeDetails.scss
+++ b/src/NodeDetails.scss
@@ -1,6 +1,6 @@
 @use "./colors.scss";
 
-.details {
+.NodeDetails {
 	position: absolute;
 	width: 300px;
 	height: 100%;
@@ -11,8 +11,7 @@
 	box-shadow: 0 0 20px hsl(0, 0%, 70%);
 	transition: right 0.5s;
 	z-index: 10;
-}
-
-.details.open {
-	right: 0;
+	&.open {
+		right: 0;
+	}
 }
